<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:padding="@dimen/dimen_10"
        android:text="@string/txt_size_dialog_title"
        android:textColor="@color/setting_txt_size"
        android:textSize="@dimen/setting_txt_size_title" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView1"
        android:gravity="center"
        android:padding="@dimen/dimen_10"
        android:text="@string/txt_size_dialog_desc"
        android:textColor="@color/setting_txt_size_desc"
        android:textSize="@dimen/setting_txt_size_desc" />

    <TextView
        android:id="@+id/txt_size_example"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView3"
        android:gravity="center"
        android:paddingBottom="@dimen/dimen_20"
        android:paddingLeft="@dimen/dimen_10"
        android:paddingRight="@dimen/dimen_10"
        android:paddingStart="@dimen/dimen_10"
        android:paddingTop="@dimen/dimen_20"
        android:text="@string/txt_size_dialog_example"
        android:textColor="@color/setting_txt_size" />

    <LinearLayout
        android:id="@+id/linear_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_size_example"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_normal"
            style="@style/SettingTextSize"
            android:text="@string/txt_size_dialog_normal" />

        <TextView
            android:id="@+id/txt_medium"
            style="@style/SettingTextSize"
            android:text="@string/txt_size_dialog_medium" />

        <TextView
            android:id="@+id/txt_large"
            style="@style/SettingTextSize"
            android:text="@string/txt_size_dialog_large" />
    </LinearLayout>

</RelativeLayout>
