<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_news_image_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/news_title"
        android:textColor="@color/colorTabHomeItemTitle"
        android:textSize="@dimen/news_joke_item_title_20"
        android:maxLines="2"
        android:ellipsize="end"
        android:layout_margin="@dimen/dimen_10"/>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_news_image_title">

        <TextView
            android:id="@+id/tv_news_image_desc"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen_80"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:lineSpacingMultiplier="1.5"
            android:maxLines="2"
            android:padding="@dimen/dimen_10"
            android:text="@string/news_content"
            android:textColor="@color/colorJokeItemDesc"
            android:textSize="@dimen/news_item_desc_14"
            android:layout_alignTop="@+id/iv_news_pic"
            android:layout_toRightOf="@+id/iv_news_pic"
            android:layout_toEndOf="@+id/iv_news_pic"/>

        <ImageView
            android:id="@+id/iv_news_pic"
            android:layout_width="@dimen/dimen_80"
            android:layout_height="@dimen/dimen_80"
            android:src="@mipmap/news_home"
            android:contentDescription="@string/news_detailed_image_desc"
            android:scaleType="center"
            android:adjustViewBounds="true"
            android:layout_marginLeft="@dimen/dimen_10"
            android:layout_marginStart="@dimen/dimen_10" />
    </RelativeLayout>


    <TextView
        android:id="@+id/tv_news_image_source"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/news_source"
        android:layout_margin="@dimen/dimen_10"
        android:paddingBottom="@dimen/dimen_10"
        android:textColor="@color/colorNewsDetailedSource"
        android:textSize="@dimen/news_source_date_12"
        android:layout_below="@+id/relativeLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/tv_news_image_pubDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/news_date"
        android:paddingBottom="@dimen/dimen_10"
        android:textColor="@color/colorNewsDetailedSource"
        android:textSize="@dimen/news_source_date_12"
        android:layout_alignTop="@+id/tv_news_image_source"
        android:layout_toRightOf="@+id/tv_news_image_source"
        android:layout_toEndOf="@+id/tv_news_image_source"
        android:layout_marginLeft="@dimen/dimen_20"
        android:layout_marginStart="@dimen/dimen_20" />

    <ImageView
        android:id="@+id/iv_image_delete"
        android:layout_width="@dimen/dimen_20"
        android:layout_height="@dimen/dimen_20"
        android:src="@mipmap/delete"
        android:layout_margin="@dimen/dimen_10"
        android:contentDescription="@string/channel_item_delete"
        android:layout_alignBottom="@+id/tv_news_image_pubDate"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
