<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewsDetailedActivity">

    <include
        android:id="@+id/include_detailed_tool"
        layout="@layout/include_toolbar" />

    <ScrollView
        android:id="@+id/news_scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/include_detailed_tool">

        <RelativeLayout
            android:id="@+id/relative_news_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_news_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/dimen_10"
                android:text="@string/news_title"
                android:textColor="@color/colorNewsDetailedTitle"
                android:textSize="@dimen/news_joke_item_title_20"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_news_source"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_news_title"
                android:layout_marginLeft="@dimen/dimen_10"
                android:layout_marginRight="@dimen/dimen_10"
                android:linksClickable="true"
                android:text="@string/news_source"
                android:textColor="@color/colorNewsDetailedSource"
                android:textSize="@dimen/news_source_date_12" />


            <ImageView
                android:id="@+id/iv_news_detailed_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_news_source"
                android:layout_marginLeft="@dimen/dimen_10"
                android:layout_marginRight="@dimen/dimen_10"
                android:layout_marginTop="@dimen/dimen_10"
                android:adjustViewBounds="true"
                android:contentDescription="@string/news_detailed_image_desc"
                android:scaleType="fitXY" />

            <TextView
                android:id="@+id/tv_news_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_news_detailed_image"
                android:layout_margin="@dimen/dimen_10"
                android:gravity="center_vertical|start"
                android:lineSpacingMultiplier="1.5"
                android:text="@string/news_content"
                android:textColor="@color/colorNewsDetailedContent"
                android:textSize="@dimen/news_content_16" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_news_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_news_prompt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_30"
                    android:layout_marginTop="@dimen/dimen_10"
                    android:gravity="center"
                    android:text="@string/news_click_web_source"
                    android:textColor="@color/colorClickWebSourceText"
                    android:textSize="@dimen/news_web_click_14" />
            </LinearLayout>
        </RelativeLayout>

    </ScrollView>


</RelativeLayout>
